2011-10-17  Guillaume Lazzara  <z@lrde.epita.fr>

	Add Niblack's binarization algorithm.

	* scribo/binarization/all.hh: Update includes.

	* scribo/binarization/internal/compute_local_threshold.hh,
	* scribo/binarization/internal/compute_sauvola_threshold.hh,
	* scribo/binarization/internal/first_pass_functor.hh,
	* scribo/binarization/internal/local_threshold_debug.hh,
	* scribo/binarization/internal/sauvola_debug.hh,
	* scribo/binarization/internal/sauvola_formula.hh,
	* scribo/binarization/sauvola.hh,
	* scribo/binarization/sauvola_ms.hh,
	* scribo/binarization/sauvola_threshold.hh,
	* scribo/binarization/sauvola_threshold_image.hh: Revamp code in
	order to share some parts with Niblack's algorithm.

	* scribo/binarization/internal/niblack_formula.hh,
	* scribo/binarization/niblack.hh,
	* scribo/binarization/niblack_threshold.hh: New.

	* src/binarization/Makefile.am
	* tests/binarization/Makefile.am: Add new targets.

	* src/binarization/niblack.cc: New tool.

	* tests/binarization/niblack.cc: New test.

	* tests/binarization/niblack.ref.pbm: New test data.

2011-10-14  Guillaume Lazzara  <z@lrde.epita.fr>

	Add a new tool for global thresholding.

	* src/binarization/Makefile.am: Add a new target.

	* src/binarization/global_threshold.cc: New.

2011-10-14  Guillaume Lazzara  <z@lrde.epita.fr>

	* tests/binarization/global_threshold.cc: Fix test.

2011-10-14  Guillaume Lazzara  <z@lrde.epita.fr>

	Add Otsu's binarization implementation.

	* scribo/binarization/otsu.hh: New routine.

	* src/binarization/Makefile.am,
	* src/binarization/otsu.cc: New tool.

	* tests/binarization/Makefile.am,
	* tests/binarization/otsu.cc,
	* tests/binarization/otsu.ref.pbm: New test data.

2011-09-19  Guillaume Lazzara  <z@lrde.epita.fr>

	Fix paths in the SCRIBO viewer.

	* demo/viewer/demodir.hh.in (SCRIBO_PREFIX_BINDIR): Remove macro.
	(SCRIBO_PREFIX_LIBEXECDIR): New macro.
	* demo/viewer/runner.cc:
	s/SCRIBO_PREFIX_BINDIR/SCRIBO_PREFIX_LIBEXECDIR/.